# math-cued-activation

./: .gitignore  PIPELINE.md  README.md  commands.sh  pyproject.toml  qwen_coder_finetunes.txt  vllm.md
charts/: 3b-arch.mmd
configs/: smoke_qwen25_coder_3b_gsm8k.toml  smoke_qwen25_coder_3b_imo.toml  smoke_vibethinker_imo.toml  vibethinker_imo.toml
explorer/: README.md  __init__.py
explorer/config/: gemma.toml  gpt.toml  qwen.toml
explorer/server/: __init__.py  app.py
explorer/tools/: populate_feature_properties.py  populate_top_samples.py  register_math_cued_ica.py  render_histograms.py
legacy/: README.md
legacy/notes/: prompt.txt
legacy/scripts/: daemon.py  extract_activation_sidecars.py  generate_imo_text.py  generate_imo_text_deepinfra.py  generate_imo_text_parallel.py  generate_imo_text_qwen_vllm.py  inspect_activation_distance.py  plot_pairwise_activation_cosine.py  (+1 more)
scripts/: capture.py  capture_imo_activations.py  daemon.py  enrich.py  extract_activation_sidecars.py  fit.py  fit_ica_qwen_vibethinker_mixed.py  generate.py  generate_imo_text.py  generate_imo_text_hf_router.py  generate_imo_text_parallel.py  generate_imo_text_vllm.py  inspect_ica_prompt_components.py  plot_pairwise_weight_cosine.py  register.py  run_vibethinker.py  serve.py  start_vllm.py  stop_vllm.py  summarize_imo_answers.py  validate.py  visualize_activation_cosine_heatmap.py
tests/: conftest.py  test_capture_config.py  test_config.py  test_datasets.py  test_enrichment_resume.py  test_generation_config.py  test_registration_resume.py  test_script_interfaces.py
(+101 files in other folders)
