[project]
name = "try-vibethinker-3b"
version = "0.1.0"
description = "Small local inference script for WeiboAI/VibeThinker-3B"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "fastica-torch",
    "gb10-load-llm",
    "matplotlib",
    "networkx",
    "scipy",
    "torch",
    "transformers>=4.54.0",
]

[tool.uv]
package = false

[tool.uv.sources]
fastica-torch = { path = "vendor/FastICA_torch" }
